# lorem-web

./: Cargo.toml  Trunk.toml  index.html  lorem-2de7a8e51b556a91.js  lorem-2de7a8e51b556a91_bg.wasm  lorem-65434ecbc38f3d3b.js  lorem-65434ecbc38f3d3b_bg.wasm  lorem-8c1a71ec1375233.js  lorem-8c1a71ec1375233_bg.wasm  lorem-91b33eb9a2130b01.js  lorem-91b33eb9a2130b01_bg.wasm  lorem-b2c47c9bbc24f9dd.js  lorem-b2c47c9bbc24f9dd_bg.wasm  main-6dbc945054aabf87.css  main-a493ec0cfb0752c0.css  main-b1e6ec6fba3dc563.css  main-f5cc61ed5f839edc.css  main-fc5968d0dc42287.css  package.json
src/: main.rs
style/: main.scss
