[package]
name = "lorem"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10" }
leptos_router = { version = "0.4.10" }
leptos_meta = { version = "0.4.10", features = ["csr"] }
serde = { version = "1.0.186", features = ["derive"] }
futures = "0.3.28"
console_log = "1.0.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
lipsum = "0.9.0"
rand = { version = "0.8.5" }


[dependencies.web-sys]
version = "0.3.64"
features = ["HtmlInputElement", "Storage", "Window"]
